devsecops/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netsentinel-isolation-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: netsentinel-backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: netsentinel-frontend
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: netsentinel-mongodb
    ports:
    - protocol: TCP
      port: 27017
